--- a/projeto-api-ts/package.json
+++ b/projeto-api-ts/package.json
@@ -1,26 +1,31 @@
 {
-  "name": "projeto-api",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "dev": "nodemon --exec ts-node-dev src/server.ts",
-    "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "express": "^4.19.2",
-    "sqlite3": "^5.1.7",
-    "typeorm": "^0.3.20"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^22.4.0",
-    "nodemon": "^3.1.4",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.5.4"
-  }
+    "name": "projeto-api",
+    "version": "1.0.0",
+    "main": "index.js",
+    "scripts": {
+        "dev": "nodemon --exec ts-node-dev src/server.ts",
+        "build": "tsc"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "description": "",
+    "dependencies": {
+        "bcrypt": "^5.1.1",
+        "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
+        "express": "^4.19.2",
+        "sqlite3": "^5.1.7",
+        "typeorm": "^0.3.20"
+    },
+    "devDependencies": {
+        "@types/bcrypt": "^5.0.2",
+        "@types/cookie-parser": "^1.4.7",
+        "@types/cors": "^2.8.17",
+        "@types/express": "^4.17.21",
+        "@types/node": "^22.4.0",
+        "nodemon": "^3.1.4",
+        "ts-node-dev": "^2.0.0",
+        "typescript": "^5.5.4"
+    }
 }
